@@ -35,7 +35,7 @@ public class CongestionControlTest extends SipServletTestCase {
 
 	private static final String TRANSPORT = "udp";
 	private static final boolean AUTODIALOG = true;
-	private static final int TIMEOUT = 5000;	
+//	private static final int TIMEOUT = 5000;	
 //	private static final int TIMEOUT = 100000000;
 	
 	TestSipListener sender;
@@ -95,7 +95,7 @@ public class CongestionControlTest extends SipServletTestCase {
 		// For this test the queue size is 3, so we feed 40 messages asap and watch for error response.
 		// Since we dont want to wait 40*5 secs, we kill everything with no clean up, that's fine for this test.
 		for(int q=0; q<40; q++) {
-			sender.sendInDialogSipRequest("INFO", new Integer(q).toString(), "text", "plain", null);
+			sender.sendInDialogSipRequest("INFO", Integer.valueOf(q).toString(), "text", "plain", null);
 			Thread.sleep(500);
 		}
 		sender.sendBye();
@@ -124,7 +124,7 @@ public class CongestionControlTest extends SipServletTestCase {
 		// For this test the queue size is 3, so we feed 40 messages asap and watch for error response.
 		// Since we dont want to wait 40*5 secs, we kill everything with no clean up, that's fine for this test.
 		for(int q=0; q<40; q++) {
-			sender.sendInDialogSipRequest("INFO", new Integer(q).toString(), "text", "plain", null);
+			sender.sendInDialogSipRequest("INFO", Integer.valueOf(q).toString(), "text", "plain", null);
 			Thread.sleep(500);
 		}
 		sender.sendBye();
@@ -152,7 +152,7 @@ public class CongestionControlTest extends SipServletTestCase {
 		// For this test the queue size is 3, so we feed 40 messages asap and watch for error response.
 		// Since we dont want to wait 40*5 secs, we kill everything with no clean up, that's fine for this test.
 		for(int q=0; q<40; q++) {
-			sender.sendInDialogSipRequest("INFO", new Integer(q).toString(), "text", "plain", null);
+			sender.sendInDialogSipRequest("INFO", Integer.valueOf(q).toString(), "text", "plain", null);
 			Thread.sleep(500);
 		}
 		sender.sendBye();
@@ -181,7 +181,7 @@ public class CongestionControlTest extends SipServletTestCase {
 		// For this test the queue size is 3, so we feed 40 messages asap and watch for error response.
 		// Since we dont want to wait 40*5 secs, we kill everything with no clean up, that's fine for this test.
 		for(int q=0; q<40; q++) {			
-			sender.sendInDialogSipRequest("INFO", new Integer(q).toString(), "text", "plain", null);
+			sender.sendInDialogSipRequest("INFO", Integer.valueOf(q).toString(), "text", "plain", null);
 			Thread.sleep(500);
 		}
 		sender.sendBye();
